<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <com.job.view.BackLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    
	    <TextView 
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
	        android:text="@string/introduction"
	        android:textSize="20sp"
	        android:layout_centerInParent="true"
	        android:textColor="@color/whites" 
	        />
	    
	    <TextView 
	        android:id="@+id/save"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
	        android:text="@string/save"
	        android:textSize="17sp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:textColor="@color/whites" 
	        />
	    
	</com.job.view.BackLayout>
	
    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:padding="0dp"
               >
		
        <EditText 
            android:id="@+id/introduction"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:gravity="top"
            android:padding="7dp"
            android:scrollbars="vertical"
            android:hint="@string/introduction_indetail"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:background="@drawable/dcn_login_box_bg"
            android:layout_height="123dp" /> 

    </LinearLayout>

</LinearLayout>
